# fiap-flights-delay

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: data_dictionary.md
notebooks/: 01_eda.ipynb  02_supervised_classification.ipynb  03_supervised_regression.ipynb  04_unsupervised.ipynb
reports/: executive_summary.md  video_script.md
reports/tables/: airline_delay_profile.csv  airport_clusters.csv  airport_profiles.csv  classification_metrics.csv  cluster_summary.csv  missing_values.csv  origin_airport_delay_profile.csv  regression_metrics.csv  scheduled_hour_delay_profile.csv
scripts/: run_pipeline.py
src/flight_delays/: __init__.py  config.py  data.py  features.py  modeling.py  reporting.py  unsupervised.py
tests/: test_features.py
