[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-delays-tech-challenge"
version = "0.1.0"
description = "Machine Learning Engineering project for US flight delay prediction."
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tabulate",
    "jupyter",
    "ipykernel",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
